Archive2/72/d6899c56657ae2/output
main.cpp:2:1: warning: implicit declaration of function 'strchr' [-Wimplicit-function-declaration]
 char *ptr = strchr(str, 'W');
 ^
main.cpp:2:13: warning: incompatible implicit declaration of built-in function 'strchr' [enabled by default]
 char *ptr = strchr(str, 'W');
             ^
main.cpp:2:1: error: initializer element is not constant
 char *ptr = strchr(str, 'W');
 ^
main.cpp:3:8: error: expected declaration specifiers or '...' before string constant
 printf("%u", ptr);
        ^
main.cpp:3:14: error: expected declaration specifiers or '...' before 'ptr'
 printf("%u", ptr);
              ^
